resources/assets/less/style.less
@font-face {
  font-family: "gentiumW";
  src: url("/build/fonts/GentiumPlus-R.woff") format('woff');
}

@font-face {
  font-family: 'ezraW';
  src: url('/build/fonts/SILEOTSR.woff') format('woff');
}

div.wordPopover {
  font-size: 14px;
}

.hebrew {
  font-family: 'ezraW';
  font-size: 21px;
  direction: rtl;
}

:lang(he) {
  .hebrew
}

.greek {
  font-family: 'gentiumW';
}

 .word {
  font-size: 19px;
  .greek
}

 h4 .greek {
   font-size: 21px;
 }

a.word { color: black }
a.word:hover { color: #428bca }

.footer {
  width: 100%;
  color: #999;
  text-align: center;
  background-color: #f9f9f9;
  border-top: 1px solid #e5e5e5;
  position: fixed;
  height:80px;
  bottom:0;
  font-size: small;
  display: none;
}

div.wordDetails {
  width:100%;
  font-family: "gentiumW";
  font-size: 16px;
}

a.word.mark {
  padding: 0;
  background-color: #f7f0dd;
}

div.textContainer {
  bottom: 0;
  position: fixed;
  top: 120px;
}

div.textDisplay {
  overflow-y: scroll;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
}

div.detailsDisplay {
  overflow-y: scroll;
  position: absolute;
  padding:5px;
}

.form-inline .form-control.jumper-form-control {
  width: auto;
  display: inline;
}

.detailsBlock() {
  border-top: 1px solid #ddd;
  margin-top: 6px;
}

div.footnote {
  .detailsBlock;
}

div.variants {
  .detailsBlock;}

div.concordance {
  .detailsBlock;
}

// no columns, popup
@media screen and (max-width: 529px) {
  div.textContainer {
    width: 100%;
    max-width: 480px
  }
  div.textDisplay {
    width: 100%;
    height: 100%;
    padding-right: 30px;
  }
  div.detailsDisplay {
    display: none;
  }
}

// two rows
@media (min-width:530px) and (min-height: 640px) and (max-width: 767px) {
  div.textContainer {
    width: 100%;
    max-width: 640px;
  }
  div.textDisplay {
    width: 100%;
    height: 60%;
    padding-right: 30px;
  }
  div.detailsDisplay {
    bottom: 0px;
    height: 40%;
    width: 100%;
    padding-right: 30px;
  }
}

// two columns
@media (min-width: 768px), (min-width: 530px) and (max-height: 639px) {
  div.textContainer {
    width: 100%;
  }
  div.textDisplay {
    width: 70%;
    padding-right: 10px;
  }
  div.detailsDisplay {
    top: 0;
    right: 0px;
    width: 30%;
    bottom: 0;
    padding-right: 10px;
  }
}


// show footer if has place
@media (min-height: 768px) and (min-width: 768px) {
  div.textContainer {
    bottom: 80px;
  }
  div.footer {
    display: block;
  }
}

@media (min-width: 750px) and (max-width: 991px) {
  div.textContainer {
    max-width: 750px;
  }
}

@media (min-width: 992px) and (max-width: 1199px) {
  div.textContainer {
    max-width: 970px;
  }
}

@media (min-width: 1200px) {
  div.textContainer {
    width: 1140px;
  }
}

// pagination collides with footer
.pagination > .active > span {
  z-index: auto;
}

